--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,9 @@ author:
   name   : "Alexander Tomlinson"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Python developer at the Casey Reading Center at OHSU."
+  location: "Portland, OR"
   links:
-    - label: "Website"
+    - label: "LinkedIn"
       icon: "fas fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/awctomlinson/"
     - label: "GitHub"
@@ -68,15 +69,12 @@ author:
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "Website"
+      icon: "fas fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/awctomlinson/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/awctomlinson"
 
 defaults:
   # _posts
@@ -86,10 +84,10 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
+      read_time: false
+      comments: false
+      share: false
+      related: false
   # _pages
   - scope:
       path: "_pages"
