--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   location: "Portland, OR"
   links:
     - label: "LinkedIn"
-      icon: "fas fa-fw fa-linkedin"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/awctomlinson/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -70,7 +70,7 @@ author:
 footer:
   links:
     - label: "Website"
-      icon: "fas fa-fw fa-linkedin"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/awctomlinson/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
