--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
 
 footer:
   links:
-    - label: "Website"
+    - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/awctomlinson/"
     - label: "GitHub"
