--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 main:
   - title: "Publications"
     url: /publications/
+  - title: "Resume"
+    url: /resume/
   - title: "About"
     url: /about/
