--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,17 @@ collections:
     permalink: /:collection/:path/
 
 defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _publications
   - scope:
       path: ""
