--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ defaults:
       type: publications
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: false
       comments: false
       share: false
